feat: add contact form functionality and related assets
- Added SVG icons for email and phone.
- Implemented a new PHP script for handling contact form submissions.
- Removed obsolete contact form component files.
- Updated footer and header links to use Angular router.
- Created a new contact us page with a styled form and validation.
- Integrated email and phone reveal functionality with copy-to-clipboard feature.
- Added Google Maps integration with dynamic API key fetching.
- Introduced a script to generate env.json from .env file for configuration.

--- a/public/assets/i18n/af.json
+++ b/public/assets/i18n/af.json
@@ -179,5 +179,28 @@
     "email": "E-pos",
     "message": "Boodskap",
     "submit": "Stuur Boodskap"
+  },
+  "contactPage": {
+    "title": "Kontak Ons",
+    "tagline": "Voel vry om",
+    "acceptText": "Ek aanvaar die",
+    "subtitle": "Gebruik die vorm of die kontakbesonderhede hieronder.",
+    "addressLabel": "Adres",
+    "phoneLabel": "Telefoon",
+    "emailLabel": "E-pos",
+    "showPhone": "Wys telefoon",
+    "showEmail": "Wys e-pos",
+    "copy": "Kopieer",
+    "form": {
+      "namePlaceholder": "Jou volle naam",
+      "emailPlaceholder": "jou.e-pos@voorbeeld.com",
+      "phonePlaceholder": "+27 12 345 6789",
+      "messagePlaceholder": "Vertel ons meer oor jou navraag..."
+    },
+    "sending": "Besig om te stuur...",
+    "successTitle": "Dankie!",
+    "successText": "Jou boodskap is suksesvol gestuur. Ons sal binnekort by jou terugkom.",
+    "errorTitle": "Fout:",
+    "copied": "Gekopieer!"
   }
 }
